<?xml version="1.0"?>
<package format="2">
  <name>rclcpp</name>
  <version>0.0.0</version>
  <description>c++ client lib</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmw</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
