<?xml version="1.0"?>
<package format="2">
  <name>userland</name>
  <version>0.0.0</version>
  <description>user's code</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_impl1</depend>  <!-- This would be indirect via rmw_implementations -->
  <depend>rmw_impl2</depend>  <!-- This would be indirect via rmw_implementations -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
